# setup.cfg file at the root directory
[metadata]
name = featuredeploy
version = 1.0.6
author = Resmio Team
description = Test single features
url = http://github.com/resmio/resmio/featuredeploy
[options]
python_requires = >=3.7, <4
install_requires =
    pytz>=2016.7
    python-digitalocean==1.9.0
    pycryptodome==3.14.1

[options.extras_require]
test =
    pytest
    coverage

[options.package_data]
sample =
    example_data.csv
